force-app/main/default/objects/Score_Sheet__c/Score_Sheet__c.object-meta.xml
<CustomObject>
    <label>Score Sheet</label>
    <nameField>
        <displayFormat>Score-{YYYY}{MM}{DD}{0000}</displayFormat>
        <label>Score Sheet No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Score Sheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>