force-app/main/default/objects/Score_Sheet__c/fields/Ability_of_Mid_to_high_End__c.field-meta.xml
<CustomField>
    <fullName>Ability_of_Mid_to_high_End__c</fullName>
    <inlineHelpText>For new customer, according to the ratio of the planned high-end proportion to the annual high-end proportion index. For existing customer, according to the annual completion rate of the high-end proportion index of last year</inlineHelpText>
    <label>Sales Capabilities of High-end Products</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
                <label>&gt;=100%</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>80%-99%</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>&lt;80%</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>