force-app/main/default/objects/Score_Sheet__c/fields/Ability_of_Mid_to_high_End_OEM__c.field-meta.xml
<CustomField>
    <fullName>Ability_of_Mid_to_high_End_OEM__c</fullName>
    <inlineHelpText>For new customer, according to the ratio of the planned high-end proportion to the annual high-end proportion index. For existing customer, according to the annual completion rate of the high-end proportion index of last year</inlineHelpText>
    <label>Ability of Mid-to-high End(OEM)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
                <label>1)&gt;=100%</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>2)80%-99%</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>3)&lt;80%</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>