force-app/main/default/objects/Score_Sheet__c/fields/Agree_to_Develop__c.field-meta.xml
<CustomField>
    <fullName>Agree_to_Develop__c</fullName>
    <formula>IF(Evaluated_Score__c &gt;= 60,&quot;Yes&quot; , &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>是否同意开发</label>
    <type>Text</type>
</CustomField>