force-app/main/default/objects/Score_Sheet__c/fields/Cooperate_Willingness_A_sellout_Ag__c.field-meta.xml
<CustomField>
    <fullName>Cooperate_Willingness_A_sellout_Ag__c</fullName>
    <label>Cooperate Willingness A(sellout)(Ag)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15</fullName>
                <label>1) The customer can share the value chain with Hisesne; Hisense can price alone on condition that the cooperation is profitable for the customer</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>2) The customer can share the value chain with Hisesne; both Hisense and customer should participate in pricing</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>3) The customer can share the value chain with Hisesne; the customer will price alone acooding to Hisense brand position</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>4) The customer refuses to share value chain; only the customer could set wholesale and retail prices</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>