force-app/main/default/objects/Score_Sheet__c/fields/Cooperate_Willingness_C_stock_order_Ag__c.field-meta.xml
<CustomField>
    <fullName>Cooperate_Willingness_C_stock_order_Ag__c</fullName>
    <label>Cooperate Willingness C(stock&amp;order)(Ag)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>1) Joint investment and Hisense is the decision-maker</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>2) Joint investment and both parties make the decision</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3) Joint investment and customer is the decision-maker</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>4) Hisense is the investor and customer is the decision-maker</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>