force-app/main/default/objects/Score_Sheet__c/fields/Cooperated_product_line_new__c.field-meta.xml
<CustomField>
    <fullName>Cooperated_product_line_new__c</fullName>
    <inlineHelpText>The numer of coopered product lines（10 Points）</inlineHelpText>
    <label>Cooperated product line</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>&gt;2</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>2</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>