force-app/main/default/objects/Score_Sheet__c/fields/Cooperation_product_lineup__c.field-meta.xml
<CustomField>
    <fullName>Cooperation_product_lineup__c</fullName>
    <inlineHelpText>Hisense listing products in channel (20 Points）</inlineHelpText>
    <label>Cooperation product lineup</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>20</fullName>
                <label>Choose at least one high-end product</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Only willing to cooperate with middle and low-end product lineup</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>Only use Hisense as a supplementary option when there is a vacancy in its product lineup</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>