force-app/main/default/objects/Score_Sheet__c/fields/Cooperation_product_lineup_new__c.field-meta.xml
<CustomField>
    <fullName>Cooperation_product_lineup_new__c</fullName>
    <inlineHelpText>Hisense listing products in channel (10 Points）</inlineHelpText>
    <label>Cooperation product lineup</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>90% of the whole series</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Choose at least one high-end product</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Only Medium and Low-end products</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>