force-app/main/default/objects/Score_Sheet__c/fields/Cooperation_product_lineup_OEM__c.field-meta.xml
<CustomField>
    <fullName>Cooperation_product_lineup_OEM__c</fullName>
    <inlineHelpText>Whether to cooperate with Hisense other product lines and cooperation quality(10 Points）</inlineHelpText>
    <label>Cooperation product lineup</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>Has Hisense product and belong to strategic or advanced customers</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Has Hisense product and belong to ordinary customers</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>No other Hisense products</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>