force-app/main/default/objects/Score_Sheet__c/fields/Customer_Credit__c.field-meta.xml
<CustomField>
    <fullName>Customer_Credit__c</fullName>
    <inlineHelpText>Auto get from the latest Credit Limit Application&apos;s feedback</inlineHelpText>
    <label>Customer Credit Rating</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>A</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>B</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>C</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>D</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>