force-app/main/default/objects/Score_Sheet__c/fields/Customer_Credit_Agency__c.field-meta.xml
<CustomField>
    <fullName>Customer_Credit_Agency__c</fullName>
    <inlineHelpText>For existing customer, auto get from the latest Credit Limit Application&apos;s feedback. Will be recognized as the lowest level when the selected value is &quot;D&quot;</inlineHelpText>
    <label>Customer Credit Rating(Agency)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15</fullName>
                <label>A</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>B</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>C</label>
            </value>
            <value>
                <fullName>-100</fullName>
                <label>D</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>