force-app/main/default/objects/Score_Sheet__c/fields/Customer_credit_rating__c.field-meta.xml
<CustomField>
    <fullName>Customer_credit_rating__c</fullName>
    <inlineHelpText>Score according to the local credit report,each grade line will be determined by the office（15 Points）</inlineHelpText>
    <label>Customer credit rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15</fullName>
                <label>A</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>B</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>C</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>D</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>