force-app/main/default/objects/Score_Sheet__c/fields/Customer_credit_rating_new__c.field-meta.xml
<CustomField>
    <fullName>Customer_credit_rating_new__c</fullName>
    <inlineHelpText>Score according to the local credit report,each grade line will be determined by the branch.（20 Points）</inlineHelpText>
    <label>Customer credit rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>20</fullName>
                <label>A</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>B</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>C</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>D</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>