force-app/main/default/objects/Score_Sheet__c/fields/Customer_profitability_new__c.field-meta.xml
<CustomField>
    <fullName>Customer_profitability_new__c</fullName>
    <inlineHelpText>the net profit rate will be created after cooperation with Hisense（15 Points）</inlineHelpText>
    <label>Customer profitability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>15</fullName>
                <label>Net Profit Ratio &gt; 3%</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Net Profit Ratio 0~3%</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Marginal revenue &gt;0</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>