force-app/main/default/objects/Score_Sheet__c/fields/Customer_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Customer_Relationship__c</fullName>
    <inlineHelpText>Auto generate from customer visit record of last year</inlineHelpText>
    <label>Customer Relationship Communication</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
                <label>Good (Management level annual meeting &amp; director level monthly meeting)</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Average (No meeting with management level &amp;director level quarterly meeting)</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>Poor (Director level half a year or a year meeting)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>