force-app/main/default/objects/Score_Sheet__c/fields/Customer_Relationship_OEM__c.field-meta.xml
<CustomField>
    <fullName>Customer_Relationship_OEM__c</fullName>
    <inlineHelpText>Auto generate from customer visit record of last year</inlineHelpText>
    <label>Customer Relationship Communication(OEM)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
                <label>1) Good (meeting of manager level yearly, and meeting of director level monthly)</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>2) Commom (meeting of director level quarterly)</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>3) Poor (meeting of director level yearly)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>