force-app/main/default/objects/Score_Sheet__c/fields/Evaluated_Member__c.field-meta.xml
<CustomField>
    <fullName>Evaluated_Member__c</fullName>
    <label>Evaluated Member</label>
    <length>255</length>
    <type>Text</type>
</CustomField>