force-app/main/default/objects/Score_Sheet__c/fields/Evaluation_Time__c.field-meta.xml
<CustomField>
    <fullName>Evaluation_Time__c</fullName>
    <label>Evaluation Time</label>
    <type>DateTime</type>
</CustomField>