force-app/main/default/objects/Score_Sheet__c/fields/Growth_Potential__c.field-meta.xml
<CustomField>
    <fullName>Growth_Potential__c</fullName>
    <inlineHelpText>For new customer, Evaluate by customer&apos;s growth rate. For existing customer, auto generate from last year revenue of the customer</inlineHelpText>
    <label>Growth Potential</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>&gt;=15%</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>&gt;=10%</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>&gt;=5%</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>&gt;=0%</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>&lt;0%</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>