force-app/main/default/objects/Score_Sheet__c/fields/Hisense_brand_recognition__c.field-meta.xml
<CustomField>
    <fullName>Hisense_brand_recognition__c</fullName>
    <inlineHelpText>Hisense brand location（20 Points）</inlineHelpText>
    <label>Hisense brand recognition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>20</fullName>
                <label>Benchmarking with A brand in the channel</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Benchmarking with B brand in the channel</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>The lowest price like OEM</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>