force-app/main/default/objects/Score_Sheet__c/fields/Hisense_Promotion__c.field-meta.xml
<CustomField>
    <fullName>Hisense_Promotion__c</fullName>
    <label>The Promotion of Hisense Brand</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>1) There are at least two co-promotions with hisense each year, and it is willing to reduce its gross margin by at least 5% or more</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>2) There are more than two co-promotions with hisense each year, and it is willing to reduce its gross margin by at least2% to 5%</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3) There are 1-2 co-promotions with hisense every year, and it is willing to reduce its gross margin by at least 1%-1.9%</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>4) No co-promotions, and each promotion is determined by hisense</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>