force-app/main/default/objects/Score_Sheet__c/fields/Hisense_Recognition__c.field-meta.xml
<CustomField>
    <fullName>Hisense_Recognition__c</fullName>
    <label>Hisense Brand Recognition</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>1)At least three high-end products</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>2)At least one high-end product</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3)Only low-to-mid-end product</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>4)Only use Hisense product as a supplement</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>