force-app/main/default/objects/Score_Sheet__c/fields/Hisense_Recognition_Agency__c.field-meta.xml
<CustomField>
    <fullName>Hisense_Recognition_Agency__c</fullName>
    <label>Customer&apos;sRecognition of Hisense(Agency)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>20</fullName>
                <label>1) Hisense is an A class brand</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>2) Hisense is a B class brand</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>3) Hisense is an OEM factory with the lowest price</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>