force-app/main/default/objects/Score_Sheet__c/fields/Industry_Ranking__c.field-meta.xml
<CustomField>
    <fullName>Industry_Ranking__c</fullName>
    <inlineHelpText>Ranking of product line in the Market, auto filled from industry ranking field of customer product line</inlineHelpText>
    <label>Industry Ranking</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>15</fullName>
                <label>Top 5 (Operator/Professional Channel Top 3)</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Top 10 (Operator/Professional channel Top 5)</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Top 20 (Operators/Professional channel after the Top 5)</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>No limit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>