force-app/main/default/objects/Score_Sheet__c/fields/Industry_ranking_new__c.field-meta.xml
<CustomField>
    <fullName>Industry_ranking_new__c</fullName>
    <inlineHelpText>Ranking in the market
（can adjust according to product line property）（20 Points）</inlineHelpText>
    <label>Industry ranking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>20</fullName>
                <label>TOP5（Operator / professional channel top 3）</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>TOP10（Operator / professional channel top 5）</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>TOP20（Operator / professional channel after 5）</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>no limit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>