force-app/main/default/objects/Score_Sheet__c/fields/Industry_ranking_OEM__c.field-meta.xml
<CustomField>
    <fullName>Industry_ranking_OEM__c</fullName>
    <inlineHelpText>Ranking in the market
（can adjust according to product line property）(30 Points）</inlineHelpText>
    <label>Industry ranking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30</fullName>
                <label>Top1-2</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>Top3-4</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Top5-</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>