force-app/main/default/objects/Score_Sheet__c/fields/Last_Evaluated_Rank__c.field-meta.xml
<CustomField>
    <fullName>Last_Evaluated_Rank__c</fullName>
    <label>Last Evaluated Rank</label>
    <length>50</length>
    <type>Text</type>
</CustomField>