force-app/main/default/objects/Score_Sheet__c/fields/Local_power_Agency__c.field-meta.xml
<CustomField>
    <fullName>Local_power_Agency__c</fullName>
    <label>Customer&apos;s Position in Local Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>1) No. 1 and No. 2 agent</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>2) No. 3 and No. 4 agent</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>3) After NO. 4</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>