force-app/main/default/objects/Score_Sheet__c/fields/Payment_Collection_Overdue_Times__c.field-meta.xml
<CustomField>
    <fullName>Payment_Collection_Overdue_Times__c</fullName>
    <label>Payment Overdue Times</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>1)0</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>2)1</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>3)2</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>4)&gt;= 3</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>