force-app/main/default/objects/Score_Sheet__c/fields/Petential_development_capacity_new__c.field-meta.xml
<CustomField>
    <fullName>Petential_development_capacity_new__c</fullName>
    <inlineHelpText>the revenue growth rate of customer in the past three years（10 Points）</inlineHelpText>
    <label>Petential development capacity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>&gt;=10%</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>&gt;=5%</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>&gt;=0%</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>