force-app/main/default/objects/Score_Sheet__c/fields/PL_ID_List__c.field-meta.xml
<CustomField>
    <fullName>PL_ID_List__c</fullName>
    <label>PL ID List (BACK)</label>
    <type>TextArea</type>
</CustomField>