force-app/main/default/objects/Score_Sheet__c/fields/Profitability__c.field-meta.xml
<CustomField>
    <fullName>Profitability__c</fullName>
    <description>Profits brought by customers</description>
    <inlineHelpText>Profits brought by customers</inlineHelpText>
    <label>Customer Profitability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>Profitible and year-on-year Growth</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Positive Gross Profit</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Ensuring Marginal Profit</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>Negative Gross Profit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>