force-app/main/default/objects/Score_Sheet__c/fields/Rejection_Agency__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Agency__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Credit issue, asset-liability ratio (financial operation status), competitor holding, and current agency brand have legal disputes, (whether there is a regular sales share agreement with the customer). Will be recognized as the lowest level when checked</inlineHelpText>
    <label>Rejection(Agency)</label>
    <type>Checkbox</type>
</CustomField>