force-app/main/default/objects/Score_Sheet__c/fields/Sales_Forecast_and_Execution__c.field-meta.xml
<CustomField>
    <fullName>Sales_Forecast_and_Execution__c</fullName>
    <inlineHelpText>For new customer, evaluate by experience of channel cooperation with other competitor. For existing customer, auto generate by sales forcase and actual report of last year</inlineHelpText>
    <label>Sales Forecast and Order Execution</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
                <label>&gt;70%</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>50%-70%</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>30%-50%</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>&lt;30%</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>