force-app/main/default/objects/Score_Sheet__c/fields/Sales_Volume__c.field-meta.xml
<CustomField>
    <fullName>Sales_Volume__c</fullName>
    <inlineHelpText>Auto get from customer information</inlineHelpText>
    <label>Customer&apos;s own Sales Scale</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>20</fullName>
                <label>1) more than $10 million</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>2) 5 (inclusive) - $10 million</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>3) 2 (inclusive) - $5 million</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>4) less than $2 million</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>